# taskmaster

./: .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .markdownlint.yml  README.md  mkdocs.yaml  pyproject.toml
docs/: example.md  index.md  installation.md
docs/commands/: create-task.md  delete-task.md  list-tasks.md
docs/includes/: abbreviations.md
