[tool.poetry]
name = "taskmaster-cli-docs"
version = "0.1.0"
description = "Documentation for the TaskMaster CLI"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-material = "^8.0.0"

[tool.poetry.dev-dependencies]
markdownlint-cli2 = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
